# CS5260_project

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  extract_preference.py  extract_query.py
.devcontainer/: devcontainer.json  post-create.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/smartflight/: __init__.py  config.py  logging_config.py  main.py
backend/src/smartflight/agent/: agent.py  extract_preference.py  extract_query.py  filter_flights.py  guardrail.py  search_flights.py  search_result_sample.txt  state.py
backend/src/smartflight/agent/fast_flights/: __init__.py  browser_capture.py  fetcher.py  model.py  parser.py  querying.py
backend/src/smartflight/agent/fast_flights/integrations/: __init__.py  base.py
backend/src/smartflight/routers/: chat.py
backend/src/smartflight/services/: alert_worker.py  alerts.py  booking.py  chat_formatting.py  emailer.py  flight_search.py  flights_mcp.py  nlu.py  progress.py  recommendation_text.py
backend/tests/: __init__.py  conftest.py  test_alert_intent.py  test_alert_worker.py  test_chat.py  test_fast_flights_querying.py  test_flights_mcp.py
flights-search/: README.md  pyproject.toml
flights-search/src/flights_search/: __init__.py  api.py
flights-search/src/flights_search/booking/: __init__.py  browser.py  google.py
flights-search/src/flights_search/client/: __init__.py  http.py
flights-search/src/flights_search/encoder/: __init__.py  request.py
flights-search/src/flights_search/models/: __init__.py  core.py
flights-search/src/flights_search/parser/: __init__.py  google.py
flights-search/src/flights_search_mcp/: __init__.py  adapters.py  errors.py  schemas.py  server.py  tools.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: postinstall.mjs
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatMessage.tsx  FlightCard.tsx  FlightFilters.tsx  Icons.tsx
frontend/src/utils/: airlines.ts  flightRoute.ts
