[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartflight"
version = "0.1.0"
description = "SmartFlight - Intelligent Flight-Discovery Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
